--- a/.env
+++ b/.env
@@ -1,7 +1,6 @@
-# .env.example
-VITE_FIREBASE_API_KEY=AIzaSyA8KxZlAYOUDf2wT8sIsUjCUmYbaNR0tyQ   
+VITE_FIREBASE_API_KEY=AIzaSyA8KxZlAYOUDf2wT8sIsUjCUmYbaNR0tyQ
 VITE_FIREBASE_AUTH_DOMAIN=chatroom-6b928.firebaseapp.com
-VITE_FIREBASE_PROJECT_ID=chatroom-6b928 
-VITE_FIREBASE_STORAGE_BUCKET=your_storage_bucket_here
-VITE_FIREBASE_MESSAGING_SENDER_ID=your_messaging_sender_id_here
-VITE_FIREBASE_APP_ID=your_app_id_here
+VITE_FIREBASE_PROJECT_ID=chatroom-6b928
+VITE_FIREBASE_STORAGE_BUCKET=chatroom-6b928.appspot.com
+VITE_FIREBASE_MESSAGING_SENDER_ID=709627572679
+VITE_FIREBASE_APP_ID=1:709627572679:web:348575b839909fc80f29e2
