--- a/vercel.json
+++ b/vercel.json
@@ -9,11 +9,11 @@
     }
   ],
   "env": {
-    "VITE_FIREBASE_API_KEY": "@vite_firebase_api_key",
-    "VITE_FIREBASE_AUTH_DOMAIN": "@vite_firebase_auth_domain",
-    "VITE_FIREBASE_PROJECT_ID": "@vite_firebase_project_id",
-    "VITE_FIREBASE_STORAGE_BUCKET": "@vite_firebase_storage_bucket",
-    "VITE_FIREBASE_MESSAGING_SENDER_ID": "@vite_firebase_messaging_sender_id",
-    "VITE_FIREBASE_APP_ID": "@vite_firebase_app_id"
+    "VITE_FIREBASE_API_KEY": "AIzaSyA8KxZlAYOUDf2wT8sIsUjCUmYbaNR0tyQ",
+    "VITE_FIREBASE_AUTH_DOMAIN": "chatroom-6b928.firebaseapp.com",
+    "VITE_FIREBASE_PROJECT_ID": "chatroom-6b928",
+    "VITE_FIREBASE_STORAGE_BUCKET": "chatroom-6b928.appspot.com",
+    "VITE_FIREBASE_MESSAGING_SENDER_ID": "709627572679",
+    "VITE_FIREBASE_APP_ID": "709627572679:web:348575b839909fc80f29e2"
   }
 }
