--- a/vercel.json
+++ b/vercel.json
@@ -14,6 +14,13 @@
     "VITE_FIREBASE_PROJECT_ID": "chatroom-6b928",
     "VITE_FIREBASE_STORAGE_BUCKET": "chatroom-6b928.appspot.com",
     "VITE_FIREBASE_MESSAGING_SENDER_ID": "709627572679",
-    "VITE_FIREBASE_APP_ID": "709627572679:web:348575b839909fc80f29e2"
+    "VITE_FIREBASE_APP_ID": "709627572679:web:348575b839909fc80f29e2",
+    "FIREBASE_PROJECT_ID": "chatroom-6b928",
+    "FIREBASE_DATABASE_URL": "https://chatroom-6b928-default-rtdb.firebaseio.com"
+  },
+  "functions": {
+    "api/**/*.js": {
+      "runtime": "nodejs18.x"
+    }
   }
 }
