--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "prebuild": "node scripts/generate-version.js",
     "build": "tsc -b && vite build",
+    "postbuild": "node scripts/post-build.js",
     "lint": "eslint .",
     "preview": "vite preview",
     "version:generate": "node scripts/generate-version.js"
