--- a/vercel.json
+++ b/vercel.json
@@ -1,30 +1,13 @@
 {
   "buildCommand": "npm run build",
-  "functions": {
-    "api/version.js": {
-      "runtime": "nodejs18.x"
-    }
-  },
   "headers": [
     {
       "source": "/version.json",
       "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "no-cache, no-store, must-revalidate"
-        },
-        {
-          "key": "Pragma",
-          "value": "no-cache"
-        },
-        {
-          "key": "Expires",
-          "value": "0"
-        }
+        { "key": "Cache-Control", "value": "no-cache, no-store, must-revalidate" },
+        { "key": "Pragma", "value": "no-cache" },
+        { "key": "Expires", "value": "0" }
       ]
     }
-  ],
-  "env": {
-    "VERCEL_BUILD_TIME": "@vercel-build-time"
-  }
+  ]
 }
