--- a/public/manifest.json
+++ b/public/manifest.json
@@ -12,20 +12,20 @@
   "categories": ["social", "communication"],
   "icons": [
     {
-      "src": "/vite.svg",
+      "src": "/dogicordlogo.png",
       "sizes": "any",
-      "type": "image/svg+xml",
+      "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/vite.svg", 
+      "src": "/dogicordlogo.png", 
       "sizes": "192x192",
-      "type": "image/svg+xml"
+      "type": "image/png"
     },
     {
-      "src": "/vite.svg",
+      "src": "/dogicordlogo.png",
       "sizes": "512x512", 
-      "type": "image/svg+xml"
+      "type": "image/png"
     }
   ],
   "shortcuts": [
@@ -36,7 +36,7 @@
       "url": "/",
       "icons": [
         {
-          "src": "/vite.svg",
+          "src": "/dogicordlogo.png",
           "sizes": "96x96"
         }
       ]
@@ -44,15 +44,15 @@
   ],
   "screenshots": [
     {
-      "src": "/vite.svg",
+      "src": "/dogicordlogo.png",
       "sizes": "1280x720",
-      "type": "image/svg+xml",
+      "type": "image/png",
       "form_factor": "wide"
     },
     {
-      "src": "/vite.svg", 
+      "src": "/dogicordlogo.png", 
       "sizes": "750x1334",
-      "type": "image/svg+xml",
+      "type": "image/png",
       "form_factor": "narrow"
     }
   ],
